fixed style in <p> wrap
e.g. in publications.html, "I currently have # citations." is indented
corretly

--- a/styles/base.css
+++ b/styles/base.css
@@ -61,6 +61,7 @@ li{padding:.25em 0;color:#444}
 
 /*body:after{content:"MacBook Pro";display:block;color:#c66;font-weight:bold;right:1em;width:2500px;top:1em;position:fixed}*/
 .wrap{padding:2em}
+p.wrap{padding:0 2em}
 
 .title{display:none}
 
